<resources>
    <string name="app_name">FantasyFootball</string>
    <string name="points_ppr">Points (PPR):</string>
    <string name="points_std">Points (STD):</string>
    <string name="adp_position">ADP (</string>
    <string name="adp_overall">ADP (Overall):</string>
    <string name="at_character">\@</string>
    <string name="colon_character">):</string>
    <string name="age">Age:</string>
    <string name="space_dash">-</string>
    <string name="best_unowned_team">Best Unowned Team</string>
    <string name="trade_value">Trade Values</string>
    <string name="value">Value:</string>
    <string name="rank">Rank:</string>
    <string name="where_am_i">Where Am I?</string>
</resources>