<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_grey_bottom"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/innerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/imageLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/teamImageView"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/nfl_logo"></ImageView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTeamPosition"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTeam"
                    style="@style/my_text_12_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    tools:text="DAL"></TextView>

                <TextView
                    android:id="@+id/textViewDash"
                    style="@style/my_text_12_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:text="-"></TextView>

                <TextView
                    android:id="@+id/textViewPosition"
                    style="@style/my_text_12_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    tools:text="TE"></TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewName"
                    style="@style/my_text_14_black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="10"
                    android:textAlignment="center"
                    tools:text="Timmy Brady " />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewAtChar"
                        style="@style/my_text_12_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:text="@string/at_character"></TextView>

                    <TextView
                        android:id="@+id/textViewOpponent"
                        style="@style/my_text_12_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        tools:text="NYJ"></TextView>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/middleLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!--
                <LinearLayout
                    android:id="@+id/levelLayoutMiddleLeft"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewSomething"
                        style="@style/my_text_med_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:text="DAL"></TextView>
                </LinearLayout>
                -->

                <LinearLayout
                    android:id="@+id/levelLayouMiddleMiddle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewRank1"
                        style="@style/my_text_12_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:text="@string/adp_overall"></TextView>

                    <TextView
                        android:id="@+id/textViewAdpOverall"
                        style="@style/my_text_12_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        tools:text="149"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/levelLayoutMiddleRight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewPointsWeek1"
                        style="@style/my_text_12_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:text="@string/points_std"></TextView>

                    <TextView
                        android:id="@+id/textViewPointsWeekStd"
                        style="@style/my_text_12_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        tools:text="22.7"></TextView>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!--
                <LinearLayout
                    android:id="@+id/levelLayoutBottomLeft"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewSomethingElse"
                        style="@style/my_text_med_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:text="QB"></TextView>
                </LinearLayout>
                -->

                <LinearLayout
                    android:id="@+id/levelLayoutBottomMiddle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewAdp1"
                        style="@style/my_text_12_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:text="@string/adp_position"></TextView>

                    <TextView
                        android:id="@+id/textViewAdpPositionPosition"
                        style="@style/my_text_12_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="RB)"></TextView>

                    <TextView
                        android:id="@+id/textViewAdpPosition"
                        style="@style/my_text_12_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        tools:text="149"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/levelLayoutBottomRight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewPointsWeek2"
                        style="@style/my_text_12_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:text="@string/points_ppr"></TextView>

                    <TextView
                        android:id="@+id/textViewPointsWeekPPR"
                        style="@style/my_text_12_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        tools:text="22.7"></TextView>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>